--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -25,29 +25,32 @@ const isoNow = date.toISOString();
     name="viewport"
     content="width=device-width, initial-scale=1, viewport-fit=cover"
 />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/svg+xml" href="/favicon.png" />
 <meta name="generator" content={Astro.generator} />
-
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
 <meta name="title" content={title} />
 <meta name="description" content={description} />
-<meta name="keywords" content={frontmatter ? frontmatter.keywords ? frontmatter.keywords : SITE_TITLE : SITE_TITLE} />
+<meta
+    name="keywords"
+    content={frontmatter
+        ? frontmatter.keywords
+            ? frontmatter.keywords
+            : SITE_TITLE
+        : SITE_TITLE}
+/>
 
 <!-- DIY Meta Tags -->
 {
     frontmatter
         ? frontmatter.meta
             ? frontmatter.meta.map((elem) => {
-                  return (
-                  <meta name={elem.name} content={elem.content} />
-                  );
+                  return <meta name={elem.name} content={elem.content} />;
               })
             : ""
         : ""
 }
-
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="article" />
