--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,34 +13,35 @@ const year = date.getFullYear();
         <div class="foot-nav-items">
           <div class="item">
             <div class="logo">{SITE_TITLE}</div>
-            <div class="email">Email: {SITE_EMAIL}</div>
+            <div class="email">{SITE_EMAIL}</div>
           </div>
 
+          <!-- 项目 -->
           <div class="item products">
-            <div class="item-title">作品</div>
-            <a href="/" target="_blank">本站博客</a>
-            <a href="https://the.top" target="_blank">TOP Link</a> 
+            <div class="item-title">Projects</div>
+            <a href="/" target="_blank">project1</a>
+            <a href="https://the.top" target="_blank">TOP Link</a>
           </div>
 
           <div class="item community">
-            <div class="item-title">社媒</div>
-            <a href="https://twitter.com/austinit" target="_blank">Twitter</a>
-            <a href="https://github.com/austin2035" target="_blank">Github</a>
-            <a href="https://t.me/austin2035" target="_blank">Telegram</a>
-          </div>
-          
-          <div class="item resources">
-            <div class="item-title">友链</div>
-            <a href="https://the.top" target="_blank">THE.TOP</a>
-            <a href="https://yufengbiji.com" target="_blank">驭风笔记</a>
+            <div class="item-title">Medium</div>
+            <a href="https://github.com/c0sc0s" target="_blank">GitHub</a>
+            <a
+              href="https://space.bilibili.com/180492401?spm_id_from=333.1007.0.0"
+              target="_blank">Bilibili</a
+            >
           </div>
 
+          <div class="item resources">
+            <div class="item-title">Links</div>
+            <a href="https://docs.cos02.top" target="_blank">JsDeepIn</a>
+            <a href="https://yufengbiji.com" target="_blank">驭风笔记</a>
+          </div>
         </div>
       </div>
       <div class="bottom">
         <div class="copyright">
-          &copy; {`${year} ${SITE_NAME}`} 
-          <a href="//github.com/austin2035/astro-air-blog">Astro-air-blog</a>
+          &copy; {`${year} ${SITE_NAME}`}
         </div>
       </div>
     </div>
