--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,11 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import Tile from "../layouts/Tile.astro";
 import MoreTile from "../layouts/MoreTile.astro";
-const allPosts = await Astro.glob("../pages/posts/*.md");
+
+//todo: 根据文件夹名称得到分类
+const allPosts = await Astro.glob("../pages/posts/**/*.md");
+
+
 allPosts.sort(
   (a, b) =>
     Date.parse(b.frontmatter.pubDate) - Date.parse(a.frontmatter.pubDate)
