fix: some details

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -14,13 +14,14 @@ const year = date.getFullYear();
           <div class="item">
             <div class="logo">{SITE_TITLE}</div>
             <div class="email">{SITE_EMAIL}</div>
+            <a href="https://the.top/cosine" target="_blank">TOP Link</a>
           </div>
 
           <!-- 项目 -->
           <div class="item products">
             <div class="item-title">Projects</div>
-            <a href="/" target="_blank">project1</a>
-            <a href="https://the.top" target="_blank">TOP Link</a>
+
+            <a href="https://docs.cos02.top" target="_blank">JsDeepIn</a>
           </div>
 
           <div class="item community">
@@ -30,13 +31,9 @@ const year = date.getFullYear();
               href="https://space.bilibili.com/180492401?spm_id_from=333.1007.0.0"
               target="_blank">Bilibili</a
             >
+
           </div>
 
-          <div class="item resources">
-            <div class="item-title">Links</div>
-            <a href="https://docs.cos02.top" target="_blank">JsDeepIn</a>
-            <a href="https://yufengbiji.com" target="_blank">驭风笔记</a>
-          </div>
         </div>
       </div>
       <div class="bottom">
