--- a/src/pages/archive.astro
+++ b/src/pages/archive.astro
@@ -2,7 +2,7 @@
 import BaseLayout from "../layouts/BaseLayout.astro";
 import ArchivePostList from "../layouts/ArchivePostList.astro";
 const allPosts = await Astro.glob("./posts/**/*.md");
-const tags = ["生活","前端", "后端", "算法", "网络"];
+const tags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
 const posts = [];
 
 tags.forEach((tag) => {
