--- a/src/layouts/MarkdownPost.astro
+++ b/src/layouts/MarkdownPost.astro
@@ -55,7 +55,7 @@ const dateFormated = formatDate(pubDate);
                 "component",
               ]}
             >
-              <div class="component-content">{description}</div>
+              <div class="component-content">{description || ""}</div>
             </div>
 
             <div class:list={["tagssheet component"]}>
